fix(auth): comprehensive fix for 405 error and CORS preflight handling
- Add highest precedence CorsFilter bean in SecurityConfig running before Spring Security filter chain
- Add WebMvcConfigurer WebConfig for web-layer CORS defense in depth
- Remove duplicate /register and /login endpoints from UserController to eliminate handler mapping ambiguity
- Add HttpRequestMethodNotSupportedException and HttpMessageNotReadableException handlers to GlobalExceptionHandler